Stop book cover image stretching

--- a/static/css/components/book.less
+++ b/static/css/components/book.less
@@ -21,5 +21,6 @@
     margin: 0 auto;
     box-shadow: 1px 2px 5px 0 @book-cover-shadow-color;
     border-radius: 3px;
+    object-fit: contain;
   }
 }
